--- a/magic-8-ball/package.json
+++ b/magic-8-ball/package.json
@@ -7,16 +7,19 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.1.1",
     "@tsconfig/svelte": "^5.0.4",
+    "autoprefixer": "^10.4.21",
     "svelte": "^5.38.1",
     "svelte-check": "^4.3.1",
-    "typescript": "~5.8.3",
+    "typescript": "~5.9.2",
     "vite": "^7.1.2"
+  },
+  "dependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
+    "tailwindcss": "^4.1.12"
   }
 }
