--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,10 +5,27 @@ on:
     branches:
       - master
       - main
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  build-and-test:
+  deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }} # URL to the deployed page
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -20,42 +37,23 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: magic-8-ball
+        working-directory: magic-8-ball # Assumes your app is in this sub-folder
 
-      - name: Build application for GitHub Pages
+      - name: Build application
         env:
-          # This will be used to set the base path in vite.config.ts
-          # The value is the repository name, which is needed for GitHub Pages
+          # This sets the base path for Vite, crucial for GitHub Pages
           BASE_URL: /${{ github.event.repository.name }}/
         run: npm run build
-        working-directory: magic-8-ball
+        working-directory: magic-8-ball # Assumes your app is in this sub-folder
 
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifact
-          path: magic-8-ball/dist
-
-  deploy-to-pages:
-    runs-on: ubuntu-latest
-    needs: build-and-test # This job depends on the build-and-test job
-    permissions:
-      pages: write # GITHUB_TOKEN needs permission to write to gh-pages
-      id-token: write # GITHUB_TOKEN needs permission to create an OIDC token
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }} # URL to the deployed page
-    steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: build-artifact
-          path: dist
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          # Upload the build output from your app's sub-folder
+          path: "magic-8-ball/dist"
 
       - name: Deploy to GitHub Pages
         id: deployment
