Refactor settings to use popover and remove Counter component

--- a/magic-8-ball/package.json
+++ b/magic-8-ball/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.12",
+    "@tailwindplus/elements": "^1.0.12",
     "tailwindcss": "^4.1.12"
   }
 }
